# GmailMCPWithAgenticArchitecture

./: README.md  action.py  decision.py  main.py  memory.py  model.py  perception.py  pyproject.toml
